<resources>
    <string name="app_name">sql Lite Base de Datos</string>
    <string name="tv_titulo">Registro de usuarios </string>
    <string name="et_documento">DOCUMENTO</string>
    <string name="et_usuario">USUARIO</string>
    <string name="et_nombres">NOMBRES</string>
    <string name="et_apellido">APELLIDOS</string>
    <string name="et_contra">CONTRASEÑA</string>
    <string name="bt_registrar">Registrar</string>
    <string name="bt_buscar">Buscar</string>
    <string name="bt_listar_registros">Listar</string>
    <string name="bt_Actualizar">Actualizar</string>
    <string name="bt_Borrar">Borrar</string>
</resources>